Closed
Bug 189327
Opened 23 years ago
Closed 23 years ago
[pop3] junk mail not getting moved into Junk folder if last message is not junk
Categories
(MailNews Core :: Filters, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.3final
People
(Reporter: gabor.liptak, Assigned: sspitzer)
References
()
Details
(Keywords: qawanted, Whiteboard: [adt1] [1.3 final candidate] fixed1.3)
Attachments
(1 file, 2 obsolete files)
|
3.78 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.3b) Gecko/20030116
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.3b) Gecko/20030116
junk mail sometimes not getting moved into Junk folder
Reproducible: Sometimes
Steps to Reproduce:
1. Set junk mail filtering on
2. Set move junk to Junk folder
3. Train the junk filter that it starts flagging messages
4. Observe that sometimes the junk messages are moved into the Junk folder,
sometimes they are left in the Inbox (although still flagged as junk, which is a
good sign)
Actual Results:
sometimes the junk messages are moved into the Junk folder, sometimes they are
left in the Inbox (although still flagged as junk, which is a good sign)
Expected Results:
always move junk messages into Junk folder, if so configured using the Junk Mail
Controls menu
| Reporter | ||
Comment 1•23 years ago
|
||
I just looked at this again, some junk gets into the Junk folder, some is left
in the Inbox, kinda alternating.
Comment 2•23 years ago
|
||
Confirming. I've had this happen with 2003011412.
I've only seen this happen when I initiate the message download and
try to read messages while the download is in progress.
I have never seen it with an automatic download.
Status: UNCONFIRMED → NEW
Ever confirmed: true
I haven't seen it yet, but I will test around this area to see if I can find a
reproducible case.
QA Contact: laurel → esther
Comment 4•23 years ago
|
||
After having initial success with this feature, the last 2 mornings I have had
20+ messages marked a junk, but not moved to the junk folder.
When a single message is pulled from the server at a time and marked as junk, it
is successfully moved to the junk folder. The problem I am seeing only happens
when I check my mail for the first time in the morning, and receive many
messages that are marked as junk, but not auto moved. I have seen this same
behavior on both the 2003011505 and 2003011605 builds.
I will try to do some testing to see if manual vs. auto pull makes a difference.
Also I am running on Linux, so changing OS to ALL
OS: Windows XP → All
Comment 5•23 years ago
|
||
Seeing it as well. I have two accounts that get checked. Upon opening mail is
automatically downloaded from first and usually junk is moved to junk folder,
but sometimes (as today) it is marked as junk but not moved.
Second account does, for some reason, not automatically download mail upon
opening mail, and when starting download of mail manually, mail gets marked as
junk but is never moved to junk mail folder.
After initial download of new mail, with mail open and automatic downloads of
new mails every 20 minutes, all junk mail gets filtered as expected for both
accounts.
Comment 6•23 years ago
|
||
OK, after spending the last 4 hours self spamming myself it appears to be a
simple problem. If the last email pulled happens to be marked as spam, the
mail is moved. If the last email pulled is not spam, the mail marked as spam is
not moved. I found no correlation between auto vs. manual download.
My observation also seems to fit comments 2,4 and 5. When you download your
mail for the first time, you tend to get both a large number of emails, and a
mix of spam/not spam. At that point you have a 50/50 chance of the last email
being spam or not. On subsequent auto pulls of mail, you are more likely to get
1 or maybe 2 messages, reducing the chance of seeing this bug.
My guess is the flag that is being set when spam was downloaded and needs to be
moved is being overwritten each time an email is checked. It needs to be set
only once, on the first occurance of spam found on a given download.
Hope this helps.
Severity: minor → normal
| Reporter | ||
Comment 7•23 years ago
|
||
"spending the last 4 hours self spamming myself" ? oh my :)
Comment 8•23 years ago
|
||
I guess it should have read 'spamming myself' or 'self spamming' and not 'self
spamming myself'. Luckily I am better at Perl than English. :-)
Anyway, without the ability to generate spam on demand, this is hard to test.
I will test this also to see if we have alternate actions going on too. I am
(and another co worker is too) seeing the reverse. We have messages in our Junk
folder that are not marked as spam and were not moved there by us. Nominating
Keywords: nsbeta1
Comment 10•23 years ago
|
||
Also can confirm this bug with 2003011604.
Junk-Filter (with move to different folder, not Junk-Folder) worked in the
beginning, but now doesn't move the Mails any more.
So I tested using move to Junk-Folder instead, but no success either.
Scott (#6) could be right. At least this morning when starting mozilla I had two
mails - the first spam, the second/last not.
The junk-mail was marked correctly, but not moved.
Comment 11•23 years ago
|
||
I can confirm I am still seeing the behavior I describe in comment #6. This
morning I had 20 emails in my inbox, 11 of which were marked as junk. The last
email downloaded was not junk, and the junk mail was not moved.
Updated•23 years ago
|
Flags: blocking1.3b+
Comment 12•23 years ago
|
||
bernd@phpwebclasses.org, are you a mozilla.org driver?
If not, please don't use flags you don't know how to use:
you may ask drivers to block 1.3b for this bug by setting "blocking1.3b?", but
only drivers are allowed to set "blocking1.3b+".
Updated•23 years ago
|
Flags: blocking1.3b+ → blocking1.3b?
Updated•23 years ago
|
Flags: blocking1.3b? → blocking1.3b-
Comment 13•23 years ago
|
||
Mail triage team: need info. QA, can you reproduce (simulate) this reliably per
comment 6?
Keywords: qawanted
Whiteboard: [need info]
Comment 14•23 years ago
|
||
I still don't see this with my IMAP account. I receive 6 messages 5 of which
are flagged as Junk and the last one in is not junk. I watch the tread pane as
all 6 come in, 5 messages above the last one are marked as junk and then
disappear from the inbox and are moved to the Junk folder. The last one is
still there because it's not junk. The may be specific to POP accounts. It
will take me a little time to test this, I need to build my training file. For
those of you seeing this are you using POP accounts? and Is the Junk folder
showing up as a "special" folder, being listed at the top of the folder pane
with an icon? Please let me know so I can zero in on reproducing this.
Comment 15•23 years ago
|
||
I see this with a pop account.
Comment 16•23 years ago
|
||
Using POP. Yes, the Junk is special. My observations since comment 6
was posted seem to confirm what is discussed there.
Comment 17•23 years ago
|
||
I see this with POP accounts. My junk folder looks like a normal folder under
Local Folders.
| Reporter | ||
Comment 18•23 years ago
|
||
yes I see this pop account too
Comment 19•23 years ago
|
||
OK, I have reproduced this here with a POP account. I can show the developer
the scenario. As reported above, it doesn't happen during the early training of
the junk file, but once it starts happening it continues to happen when the
conditions are right, which is: the last one to download, is not a junk message.
I've tested the other scenario's and they are OK.
All new messages are flagged as junk=OK
A combination of new msgs, Junk & Not Junk but the last one downloaded is Junk=OK
Comment 21•23 years ago
|
||
I have similar issue on Windows 2000 Proff. with 1.3-beta
My junk filter, although trained on several dozen mails, does not work at all in
either manual or automatic mode.
Comment 22•23 years ago
|
||
If comment #21 is meant to say that your mail is not getting marked as junk at
all, then that is a different bug. This bug concerns mail which is properly
marked as junk, but is not automatically moved to the Junk folder. Be sure you
have selected "enable junk mail controls" from Tools->Junk mail controls.
Comment 23•23 years ago
|
||
I can confirm this behaviour on Linux i686 with 1.3beta.
Junk mail move ceased completely after a few runs.
Comment 24•23 years ago
|
||
This bug exists on Win 98 SE with the nightly build from 2/15/03 (using a POP
account).
Comment 25•23 years ago
|
||
Confirming comments #6 and #19 on Linux i686 1.3beta.
Comment 26•23 years ago
|
||
I have filters set up to move email to different folders depending on To: and
CC:. I've noticed that mail marked as junk in my inbox gets moved to the junk
mail folder, but mail that is filtered to other folders and marked as junk does
not. I'd like to see it all get moved.
Comment 27•23 years ago
|
||
I think that comment #26 is really a separate issue. Could you please file a
separate bug for that?
Comment 28•23 years ago
|
||
I have experienced strange behavior with this using an IMAP connection.
First, I tried the new Junk feature with 1.3b (2003021008) on a Windows 2000
Professional box, SP3. I was going happily along, self-marking messages that
were junk and coming into my inbox as junk, and seeing the messages disappear
into the "Junk" mail folder (special folder).
Soon though, I started having problems with mail in general after messing
around with the Junk mail feature (odd, odd behavior like having to click twice
on a message, or click-off, then click back on to a message in order for it to
display in the message window pane, having many problems with Sent mail not
getting placed into my Sent folder on the IMAP server etc.). So, I reverted
back to 1.2.1 and all things are good. But I went searching for help with the
Junk mail stuff not working so well. When I was using 1.3b on the W2K Pro box,
I noticed that sometimes junk-marked messages would get automatically moved to
the Junk folder, but not always (much like what others here have posted). I
didn't get to play with it much before I gave up and reverted to 1.2.1.
Now, however, I installed 1.3b (2003021008) on another machine (which
incidentally is running W2K Advanced Server, SP3) and I see much oddity with
the Junk feature.
At this point, I figured I'd try to train it on Junk (not actual real junk, but
I don't care since this is a test IMAP account I setup to play with) so I
seeded the training by simply marking all new messages as junk. Nothing gets
moved into the Junk folder...never since installing 1.3b on this machine has
anything gotten auto-moved into the Junk folder. Something more strange is:
say I have 2 messages in my inbox and I manually mark both as junk via Tools-
>Mark Selected Messages As Junk. I then made sure that Junk Mail Controls were
set to Enable; Do not mark if in my address book (I have no entries in my
address book anyway);Move incoming messages to "Junk" on the IMAP server.
If I then select both of those messages so they are highlighted, then click
Tools->Run Junk Mail Controls on Selected Messages, Mozilla changes the Junk
status of the messages to "Not Junk" -- i.e., takes away the junk icon next to
the messages. It's not a toggle -- they are set as Not Junk if already set to
Junk, and doesn't do anything to a message if it's not set to Junk.
I'm not talking here about expecting messages to be marked as Junk as a result
of the training I've done with the Junk feature. I'm saying if I manually mark
messages as junk, they don't move to the Junk folder, and the Run Junk Mail
Controls on Selected Messages seemingly is behaving oddly by unmarking the Junk
status of messages marked as Junk.
Comment 29•23 years ago
|
||
to comment #28:
I don't think moving junk mail marked as junk by hand or by running
junk controls through the menu is implemented yet, this feature runs
only if the messages are freshly imported.
That you see your marked messages becoming unmarked simply means that
you have not trained your filter enough. A good training session looks
like this (fresh browser, untrained junk controller):
1. select a couple of mixed messages and run junk mail controls
=> a lot of messages are not marked.
2. hand mark or unmark the messages and select them again
3. run junk mail controls => a couple of messages will get marked wrongly
4. hand mark and unmark again and select all
5. run junk mail controls => now the error rate should drop significantly,
at my tests none of 40 messages where marked wrongly.
After that your filter is trained well and only needs a little help sometimes.
Comment 30•23 years ago
|
||
Mail triage team: nsbeta1+/adt1
Comment 31•23 years ago
|
||
Confirm in moz 1.3b under win2k.
It seems like this will be a straightforward fix, and ought to be included in
the 1.3 final.
| Assignee | ||
Comment 32•23 years ago
|
||
I see the problem in nsMsgLocalMailFolder::OnMessageClassified(), and will fix
it soom.
Flags: blocking1.3?
Summary: junk mail sometimes not getting moved into Junk folder → [pop3] junk mail not getting moved into Junk folder if last message is not junk
Target Milestone: --- → mozilla1.4alpha
| Assignee | ||
Comment 33•23 years ago
|
||
need to cache the spam folder uri, so that when processing several messages we
know where to copy the junk messages.
| Assignee | ||
Comment 34•23 years ago
|
||
Attachment #115506 -
Attachment is obsolete: true
Comment 35•23 years ago
|
||
This looks like an important fix for POP junk-mail controls users. Setting to
blocking1.3+
Flags: blocking1.3? → blocking1.3+
Comment 36•23 years ago
|
||
can confirm seeing this bug in Win XP Pro with Moz 1.3b as described in most
comments. Have been using Junk controls for a couple of weeks now and the
behaviour has just begun.
| Assignee | ||
Comment 37•23 years ago
|
||
Attachment #115507 -
Attachment is obsolete: true
| Assignee | ||
Comment 38•23 years ago
|
||
fixed.
I'll wait for this to be verified before I seek approval and land for 1.3 final.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•23 years ago
|
Whiteboard: [adt1] → [adt1] [1.3 final candidate]
Comment 39•23 years ago
|
||
*** Bug 195039 has been marked as a duplicate of this bug. ***
Comment 40•23 years ago
|
||
I have just tested todays build (Linux 2003022605) with Seth's patch, and using
the same script I used to describe the bug per comment #6 I cannot duplicate the
bug. The spam was moved to the Junk folder 100% of the time. Thanks Seth.
Marking as VERIFIED.
Status: RESOLVED → VERIFIED
Comment 41•23 years ago
|
||
OK, verified and ready for the branch. We're trying to get everything we have
done into the branch today so that we can see where we really are with
tomorrow's builds.
Comment 42•23 years ago
|
||
This patch hasn't been checked into mozilla1.3 branch, has it?
| Assignee | ||
Comment 43•23 years ago
|
||
fix backported to 1.3 final branch. reseting target milestone.
Target Milestone: mozilla1.4alpha → mozilla1.3final
Updated•23 years ago
|
Whiteboard: [adt1] [1.3 final candidate] → [adt1] [1.3 final candidate] fixed1.3
| Assignee | ||
Comment 44•23 years ago
|
||
fixed on both trunk and branch.
Comment 45•23 years ago
|
||
*** Bug 195603 has been marked as a duplicate of this bug. ***
Comment 46•23 years ago
|
||
*** Bug 197206 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•