fix for bug #189327. if last pop mail received is not junk, we fail to move the junk messages to the junk folder (assuming the user has it configured for that.) r/sr=bienvenu